--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simpleweb",
   "version": "1.0.0",
-  "description": "super simple web application",
+  "description": "super simple web applications",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
